--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "dayjs": "^1.11.7",
     "json-server": "^0.17.3",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
