:heavy_plus_sign: build: chart.js

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
     "json-server": "^0.17.3",
     "pinia": "^2.0.32",
