--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
     "json-server": "^0.17.3",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
