--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
+    "node-sass": "^8.0.0",
     "postcss": "^8.4.22",
     "prettier": "^2.8.4",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
     "tailwindcss": "^3.3.1",
     "vite": "^4.1.4",
     "vitest": "^0.29.1"
